--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>The Most Clutch Moment In Sidemen Among Us History</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">19 hours ago</div>
+                        <div class="date">20 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -244,7 +244,7 @@
                     <div class="video-info">
                         <h3>A Pleasure Bigger Than Sexuality | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -904,7 +904,7 @@
                     <div class="video-info">
                         <h3>Karma, Enlightenment, Devotion & Sadhana – Unreleased Talk from 2008 | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -915,7 +915,7 @@
                     <div class="video-info">
                         <h3>What Happens at 3:30 AM? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -7942,7 +7942,7 @@
                         <div class="video-info">
                             <h3>A Pleasure Bigger Than Sexuality | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -8151,7 +8151,7 @@
                         <div class="video-info">
                             <h3>Karma, Enlightenment, Devotion & Sadhana – Unreleased Talk from 2008 | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -8162,7 +8162,7 @@
                         <div class="video-info">
                             <h3>What Happens at 3:30 AM? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10287,7 +10287,7 @@
                         <div class="video-info">
                             <h3>The Most Clutch Moment In Sidemen Among Us History</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">19 hours ago</div>
+                            <div class="date">20 hours ago</div>
                         </div>
                     </a>
                 </div>
