--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Is Prop Trading in a bubble?</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Don't Let Your Life Be Poisoned | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -376,7 +376,7 @@
                     <div class="video-info">
                         <h3>When should you quit trading?</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -2294,7 +2294,7 @@
                     <div class="video-info">
                         <h3>Why The Best Trading Strategy Doesn't Exist</h3>
                         <div class="channel">Rayner Teo</div>
-                        <div class="date">2 weeks ago</div>
+                        <div class="date">3 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -2635,7 +2635,7 @@
                     <div class="video-info">
                         <h3>How To Trust Your Trading Strategy</h3>
                         <div class="channel">Rayner Teo</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Oct 30, 2025</div>
                     </div>
                 </a>
             </div>
@@ -5743,7 +5743,7 @@
                         <div class="video-info">
                             <h3>Is Prop Trading in a bubble?</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5787,7 +5787,7 @@
                         <div class="video-info">
                             <h3>When should you quit trading?</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -6484,7 +6484,7 @@
                         <div class="video-info">
                             <h3>Why The Best Trading Strategy Doesn't Exist</h3>
                             <div class="channel">Rayner Teo</div>
-                            <div class="date">2 weeks ago</div>
+                            <div class="date">3 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -6671,7 +6671,7 @@
                         <div class="video-info">
                             <h3>How To Trust Your Trading Strategy</h3>
                             <div class="channel">Rayner Teo</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Oct 30, 2025</div>
                         </div>
                     </a>
                 </div>
@@ -7909,7 +7909,7 @@
                         <div class="video-info">
                             <h3>Don't Let Your Life Be Poisoned | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
